--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -10,16 +10,20 @@ body {
     height: 6em;
     background-color: #03045e;
     color: white;
+    display: flex;
     text-align: start;
-    justify-content: center;
-    justify-items: center;
+    /* justify-content: center; */
+    justify-items: center; 
+    align-items: center;
+    padding: 5px;
 }
 .nav {
     display: flex;
     text-align: center;
     flex-direction: row;
     background-color: #0077b6;
-    height: 80px;
+    height: 50px;
+    align-items: center;
   
 }
 .fas {
@@ -37,77 +41,4 @@ body {
 }
 .sidebar {
     background-color: lightgray;
-}
-.customer-photo {
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    background-size: 32px 35px;
-    background-position: center center;
-    vertical-align: middle;
-    line-height: 32px;
-    box-shadow: inset 0 0 1px #999, inset 0 0 10px rgba(0,0,0,.2);
-    margin-left: 5px;
-}
-
-.customer-name {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 32px;
-    padding-left: 3px;
-}
-
-.k-grid tr .checkbox-align {
-    text-align: center;
-    vertical-align: middle;
-}
-
-.product-photo {
-    display: inline-block;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    background-size: 32px 35px;
-    background-position: center center;
-    vertical-align: middle;
-    line-height: 32px;
-    box-shadow: inset 0 0 1px #999, inset 0 0 10px rgba(0,0,0,.2);
-    margin-right: 5px;
-}
-
-.product-name {
-    display: inline-block;
-    vertical-align: middle;
-    line-height: 32px;
-    padding-left: 3px;
-}
-
-.k-rating-container .k-rating-item {
-    padding: 4px 0;
-}
-
-.k-rating-container .k-rating-item .k-icon {
-    font-size: 16px;
-}
-
-.dropdown-country-wrap {
-    display: flex;
-    flex-wrap: nowrap;
-    align-items: center;
-    white-space: nowrap;
-}
-
-.dropdown-country-wrap img {
-    margin-right: 10px;
-}
-
-#grid .k-grid-edit-row > td > .k-rating {
-    margin-left: 0;
-    width: 100%;
-}
-
-.k-grid .k-grid-search {
-    margin-left: auto;
-    margin-right: 0;
 }
