--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -71,3 +71,13 @@ body {
     font-weight: bold;
     padding: 0 3px;
 }
+
+.welcome {
+    background-image: url("../images/doctors-office-safe.jpg");
+    height: 100%;
+    background-repeat: no-repeat;
+}
+.welcome-header {
+    padding: 0;
+    margin: 0;
+}
