--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -47,11 +47,26 @@ body {
 }
 
 .apt-search {
-    display: flex;
+    display: block;
     align-items: center;
     justify-items: center;
     justify-content: center;
    border: 2px solid grey;
+}
+.detail-form {
+    border: 2px black solid;
+    font-size: 12px;
+    text-align: center;
+}
+.example-form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form2-style {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .crumbs ol {
@@ -74,7 +89,8 @@ body {
 
 .welcome {
     background-image: url("../images/doctors-office-safe.jpg");
-    height: 100%;
+    height: 75%;
+    width: 75%;
     background-repeat: no-repeat;
 }
 .welcome-header {
