added dr detail page

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -116,6 +116,10 @@ body {
 #grid5 {
     padding:20px;
 }
+#grid6 {
+    padding: 30px;
+    margin: auto 0;
+}
 #tabstrip h2 {
     font-weight: lighter;
     font-size: 5em;
