added styling to grid, removed form from Apt Search, updated Grid for Apt and Apt search pages, removed create filter from apt page

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -178,6 +178,11 @@ img {
 #grid {
    padding: 20px;
 }
+
+#grid .k-grid-header {
+    background-color: #0077b6;
+    
+}
 #grid2 {
     padding: 20px;
  }
