added test.html, test.js, added patient.json, added diaglog box to grid on test.html

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -32,9 +32,9 @@ body {
     text-decoration: none;
    
 } 
-#login {
-    margin-left: 800px;
-}
+ #login {
+    margin-left: 18px;
+} 
 .medical {
     background-image: url("/MedicalLogo.png");
     height: 200px;
@@ -179,24 +179,71 @@ img {
    padding: 20px;
 }
 
-#grid .k-grid-header {
+#grid .k-toolbar.k-grid-toolbar {
     background-color: #0077b6;
     
 }
 #grid2 {
     padding: 20px;
  }
+ #grid2 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+    
+}
  #grid3 {
     padding: 20px;
  }
+ #grid3 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
 #grid4 {
     padding: 20px;
+}
+#grid4 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
 }
 #grid5 {
     padding:20px;
 }
+#grid5 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
 #grid6 {
     padding: 30px;
+}
+#grid6 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
+
+#grid7 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
+#grid8 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
+#grid99 {
+    padding: 30px;
+}
+#grid99 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
+ /* .k-tabstrip-items.k-reset {
+    background-color: #0077b6;
+    
+}  */
+/* .k-link {
+    background-color: #0077b6 ;
+  
+} */
+/* .k-panelbar>li.k-state-default>.k-link.k-tabstrip-items .k-state-default .k-link {
+    color: white;
+}.k-link, .k-tabstrip-items .k-state-default .k-link {
+    color: white;
+} */
+#tabstrip {
+    height: 800px;
+    /* background-color: #0077b6; */
+  
 }
 #tabstrip h2 {
     font-weight: lighter;
