added blue bar to grids, updated test.js and test.html with diaglog function

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -221,6 +221,12 @@ img {
 #grid8 .k-toolbar.k-grid-toolbar {
     background-color: #0077b6;
 }
+#grid9 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
+#grid10 .k-toolbar.k-grid-toolbar {
+    background-color: #0077b6;
+}
 #grid99 {
     padding: 30px;
 }
