re-designed Home page, removed grid, removed sidebar, added background image to home screen, added footer to home page

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,6 +1,7 @@
 
 body {
-    height: 100vh;
+    min-height: 100vh;
+    margin: 0;
     font-family: 'Aleo', serif;
 }
 .container {
@@ -17,6 +18,9 @@ body {
     justify-items: center; 
     align-items: center;
     padding: 5px;
+}
+.header-font {
+    margin-left: 15px;
 }
 .nav {
     display: flex;
@@ -39,24 +43,22 @@ body {
     background-image: url("/MedicalLogo.png");
     height: 200px;
     width: 200px;
-    grid-area: left;
     margin: 0 auto;
 }
-.welcome-intro {
-    text-align: center;
-    grid-area: left;
-}
+
 .welcome-header {
     padding: 0;
     margin: 0;
-    grid-area:left;
     text-align: center;
+}
+.welcome-intro {
+    text-align: center;  
 }
 .welcome-buttons{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    grid-area: left;
+    
 }
 .welcome-buttons1 {
     padding: 5px;
@@ -87,28 +89,54 @@ body {
     height: 100vh;
 }
 
-#main1 {
-  
-    /* display: flex;
-    flex-direction: column; */
-    display:grid;
-    grid-template-columns: 60% 40%;    
-    grid-template-areas: 
-    "left" 
-    "right";
-    align-items: center;
-    justify-content: space-evenly;
-  
-}
-.main1-left {
+.main-container1 {
+
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
-    grid-template-areas: left;
-    padding: 20px;
+
 }
-.main1-right {
-    grid-template-areas: right;
+.main1 {
+ height: 1000px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ background-image: url(/images/doctors-office-safe.jpg);
+ background-repeat: no-repeat;
+ background-size: cover;
+   
+}
+.main2 {
+   display: flex;
+   height: 1000px;
+   flex-direction: row;
+    
+}
+.medical-intro {
+    width: 600px;
+    border: 2px red solid;
+}
+.medical-picture {
+    height: 400px;
+    width: 400px;
+background-position: center; 
+background-repeat: no-repeat;
+background-image: url("/images/doctors-office-safe.jpg");
+border: 2px red solid;
+}
+
+.footer {
+    background-color:#03045e;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: start;
+    color: white;
+    height: 150px;
+}
+.footer-links {
+    display: flex;
+    justify-content: center;
+  
 }
 .sidebar {
     background-color: lightgray;
@@ -160,11 +188,11 @@ body {
 }
 
 img {
-    border-radius: 500px;
+
     height: 400px;
     width: 450px;
     background-position: center;
-    padding: 30px;
+   
 }
 
 .reports {
