--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -51,9 +51,9 @@ body {
     margin: 0;
     text-align: center;
 }
-.welcome-intro {
+/* .welcome-intro {
     text-align: center;  
-}
+} */
 .welcome-buttons{
     display: flex;
     flex-direction: row;
@@ -109,28 +109,29 @@ body {
    display: flex;
    height: 1000px;
    flex-direction: row;
+   justify-content: center;
     
 }
 .medical-intro {
-    width: 600px;
     border: 2px red solid;
 }
 .medical-picture {
-    height: 400px;
-    width: 400px;
+
+width: 100%;
 background-position: center; 
 background-repeat: no-repeat;
-background-image: url("/images/doctors-office-safe.jpg");
+background-size: cover;
+background-image: url("/images/doctors-and-locations.jpg");
 border: 2px red solid;
 }
 
 .footer {
-    background-color:#03045e;
+    background-color: #0077b6;
     display: flex;
     flex-direction: row;
     justify-content: center;
     justify-items: start;
-    color: white;
+   color: white;
     height: 150px;
 }
 .footer-links {
@@ -331,7 +332,7 @@ img {
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: #fefefe;
+    background-color: #0077b6;
     margin: 5px auto; /* 15% from the top and centered */
     border: 1px solid #888;
     width: 80%; /* Could be more or less, depending on screen size */
@@ -343,7 +344,7 @@ img {
     position: absolute;
     right: 25px;
     top: 0;
-    color: #000;
+    color: white;
     font-size: 35px;
     font-weight: bold;
   }
