fixed footer nav links with padding, added fadein/fadeout to main2, fixed medical logo

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -34,18 +34,22 @@ body {
 .nav1 {
     color: white;
     text-decoration: none;
-   
 } 
+
  /* #login {
     margin-left: 18px;
 }  */
 .medical {
-    background-image: url("/MedicalLogo.png");
-    height: 200px;
-    width: 200px;
+    background-image: url("/Medical Logo.png");
+    background-repeat: no-repeat;
+    height: 250px;
+    width: 250px;
+    background-size: contain;
     margin: 0 auto;
 }
-
+.homepage-info {
+    margin-bottom: 400px;
+}
 .welcome-header {
     padding: 0;
     margin: 0;
@@ -139,9 +143,15 @@ border: 2px red solid;
 }
 .footer-links {
     display: flex;
-    justify-content: center;
-    margin-top: 40px;
-  
+    flex-direction: row;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+    align-content: center;
+    padding: 40px;
+}
+.footer-nav {
+    padding: 10px;
 }
 .sidebar {
     background-color: lightgray;
