--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -350,12 +350,57 @@ img {
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    padding-top: 60px;
+    padding-top: 200px;
   }
-  
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+    padding: 10px;
+  }
+  .usrname {
+      padding: 10px;
+  }
+  .password-label {
+      padding: 10px;
+      
+  }
+  .psw {
+      padding: 10px;
+  }
+  .login-buttons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+  }
+
+  .login-button {
+      margin: 10px;
+  } 
+
+  .imgcontainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      height: 180px;
+  }
+  .avatar {
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+      margin: 0;
+      padding: 0;
+  }
+  .medical-heading {
+      margin-bottom: 180px;
+  }
   /* Modal Content/Box */
   .modal-content {
-    background-color: #0077b6;
+    background-color: white;
+    color: #0077b6;
     margin: 5px auto; /* 15% from the top and centered */
     border: 5px solid #888;
     width: 50%; /* Could be more or less, depending on screen size */
