--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -47,9 +47,9 @@ body {
     background-size: contain;
     margin: 0 auto;
 }
-.homepage-info {
+/* .homepage-info {
     margin-bottom: 400px;
-}
+} */
 .welcome-header {
     padding: 0;
     margin: 0;
@@ -104,6 +104,7 @@ body {
  display: flex;
  flex-direction: column;
  justify-content: center;
+ align-items: center;
  background-image: url(/images/doctors-office-safe.jpg);
  background-repeat: no-repeat;
  background-size: cover;
@@ -480,4 +481,11 @@ img {
     float: left;
     clear: left;
     margin: 5px 0 5px 12px;
+}
+
+.k-link, .k-menu-link {
+    color: white;
+}
+.reports-dropdown {
+    color: white;
 }
